--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "nodeunit": "^0.9.0"
   },
   "dependencies": {
-    "level-atomichooks": "0.0.1"
+    "level-atomichooks": "0.0.1",
+    "node-uuid": "^1.4.1",
+    "through": "^2.3.4"
   }
 }
