--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "level-atomichooks": "0.0.1",
     "node-uuid": "^1.4.1",
-    "through": "^2.3.4"
+    "through": "^2.3.4",
+    "base60fill": "^1.0.0"
   }
 }
